--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" = \".com\" # False"
+    "\"art.vandelay@vandelay.co\" \" # False"
    ]
   },
   {
